[metadata]
name = KirchhoffSolver
version = 0.2.06
author = Maltsev Aleksandr
author_email = pulk@mail.ru
description = Kirchhoff equations solver for multiphase flow
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ISGNeuroTeam/PipesHydraulic
project_urls =
    Bug Tracker = https://github.com/ISGNeuroTeam/PipesHydraulic/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = code
packages = find:
python_requires = >=3.6

[options.packages.find]
where = code